src/index.css
@import url("https://fonts.googleapis.com/css2?family=Inconsolata:wght@700&family=Montserrat:wght@600&family=Space+Mono:wght@400;700&display=swap");

* {
  box-sizing: border-box;
  transition: ease 0.3s;
}

body {
  margin: 0;
  background: white;
}

button {
  border: none;
}

